--- a/Arquivos/Modulo_02/Desafios/d010/Projeto-Android/estilo/style.css
+++ b/Arquivos/Modulo_02/Desafios/d010/Projeto-Android/estilo/style.css
@@ -57,11 +57,12 @@ header > p{
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     color: white;
-    max-width: 500px;
+    max-width: 600px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 50px;
     margin: auto;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.466);
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.600);
 }
 
 nav {
