--- a/desafios/modulo-02/d012/estilo/style.css
+++ b/desafios/modulo-02/d012/estilo/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
@@ -69,35 +68,31 @@ section.normal {
 }
 
 section.imagem {
-    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
 }
 
 section.imagem > p{
-    display: inline-block;
-    padding: 10px;
     background-color: rgba(0, 0, 0, 0.514);
+    display: inline-block;
+    padding: 5px;
     text-shadow: 1px 1px 0px black;
 }
 
 section#img01 {
-    background-image: url(../imagens/background001.jpg);
-    background-position: right center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: url(../imagens/background001.jpg) right center fixed;
     background-size: cover;
 }
 
 section#img02 {
-    background-image: url(../imagens/background002.jpg);
-    background-position: left center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: url(../imagens/background002.jpg) fixed;
+    background-size: cover;
 }
 
 footer {
     background-color: black;
-    color: white;
     text-align: center;
+    color: white;
     padding: 10px;
 }
