--- a/exercicios/modulo-03/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/modulo-03/ex026/mq002/estilos/paisagem.css
@@ -1,1 +1,9 @@
 @charset "utf-8";
+
+
+/* CSS - (landscape) */
+
+body {
+  background-image: url(../imagens/cev-landscape.jpg);
+  background-position: left bottom;
+}
