--- a/exercicios/modulo-03/ex026/mq002/estilos/retrato.css
+++ b/exercicios/modulo-03/ex026/mq002/estilos/retrato.css
@@ -1,1 +1,8 @@
 @charset "utf-8";
+
+/* CSS - Portrait*/
+
+body {
+  background-image: url(../imagens/cev-portrait.jpg);
+  background-position: center bottom;
+}
