--- a/exercicios/modulo-03/ex026/mq004/estilos/midia-query.css
+++ b/exercicios/modulo-03/ex026/mq004/estilos/midia-query.css
@@ -3,5 +3,59 @@
 /* Todas as demais mídias */
 
 @media print {
-  
+  * {
+    font-family: 'Courier New', Courier, monospace;
+  }
+
+  main {
+    border: 2px solid black;
+  }
+
+  main h1 {
+    color: black;
+    text-shadow: none;
+  }
+
+  main::after {
+    content: "Instagrem: @dev.richard";
+  }
+
+  img#cell {display: none;}
+  img#tablet {display: none;}
+  img#print {display: block;}
+  img#dasktop {display: none;}
+  img#tv {display: none;}
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /* Small devices */
+  body {
+    background-image: url("../imagens/back-tablet.jpg");
+  }
+  img#cell {display: none;}
+  img#tablet {display: block;}
+  img#print {display: none;}
+  img#dasktop {display: none;}
+  img#tv {display: none;}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /* Large device */
+  body {
+    background-image: url("../imagens/back-pc.jpg");
+  }
+  img#cell{display: none;}
+  img#tablet{display: none;}
+  img#print{display: none;}
+  img#dasktop{display: block;}
+  img#tv{display: none;}
+}
+
+@media screen and (min-width: 1200px) { /* Extra large devices  */
+  body {
+    background-image: url("../imagens/back-tv.jpg");
+  }
+  img#cell{display: none;}
+  img#tablet{display: none;}
+  img#print{display: none;}
+  img#dasktop{display: none;}
+  img#tv{display: block;}
 }
