--- a/exercicios/modulo-03/ex026/mq005/estilos/style.css
+++ b/exercicios/modulo-03/ex026/mq005/estilos/style.css
@@ -20,8 +20,22 @@ h1 {
   text-align: center;
 }
 
-menu {
+i#burguer {
+  background-color: rgb(47, 47, 47);
+  color: white;
   display: block;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+
+i#burguer:hover {
+  background-color: white;
+  color: black;
+}
+
+menu {
+  display: none;
 }
 
 menu ul {
@@ -60,3 +74,4 @@ article > p {
   margin-bottom: 20px;
   text-indent: 20px;
 }
+
